cleaned up demo

--- a/src/components/MyGoals/style.scss
+++ b/src/components/MyGoals/style.scss
@@ -30,6 +30,7 @@
       margin-right: -2px;
       td{
         background-color: rgba(37, 42, 48, 0.68);
+        color: #828386
       }
     }
   }
